--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:postgresql://localhost:5432/autoservice_db
-db.username=myusername
-db.password=mypassword
+db.url=jdbc:postgresql://localhost:5432/myDataBase
+db.username=postgres
+db.password=postgres
