--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,32 @@
                         </goals>
                     </execution>
                     <execution>
+                        <id>jcc-report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludes>
+                       
+                        <exclude>ru/tolstykh/util/**</exclude>
+
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
                         <id>report</id>
                         <phase>test</phase>
                         <goals>
@@ -150,6 +176,10 @@
             </plugin>
         </plugins>
     </reporting>
+
+
+
+
 
 
 
