--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
                     <excludes>
                        
                         <exclude>ru/tolstykh/util/**</exclude>
-
+                        <exclude>ru/tolstykh/entity/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
