--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <version>5.10.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.20.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
