--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,44 @@
 
 
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>2.0.9</version> <!-- Используй актуальную версию -->
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito2</artifactId>
+            <version>2.0.9</version> <!-- Используй актуальную версию -->
+            <scope>test</scope>
+        </dependency>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
@@ -127,7 +165,7 @@
                 </executions>
                 <configuration>
                     <excludes>
-                       
+
                         <exclude>ru/tolstykh/util/**</exclude>
                         <exclude>ru/tolstykh/entity/**</exclude>
                     </excludes>
